--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/hi.json
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/hi.json
@@ -33,8 +33,8 @@
 		"AUDIO_DEVICE": "ऑडियो डिवाइस",
 		"NO_VIDEO_DEVICE": "वीडियो डिवाइस नहीं मिला",
 		"NO_AUDIO_DEVICE": "ऑडियो डिवाइस नहीं मिला",
-		"JOIN": "सत्र में शामिल हों",
-		"PREPARING": "सत्र तैयार कर रहा है ..."
+		"JOIN": "कमरा में शामिल हों",
+		"PREPARING": "कमरा तैयार कर रहा है ..."
 	},
 	"TOOLBAR": {
 		"MUTE_AUDIO": "अपनी ऑडियो को मौन करें",
@@ -52,7 +52,7 @@
 		"START_RECORDING": "रिकॉर्डिंग प्रारंभ करें",
 		"STOP_RECORDING": "रिकॉर्डिंग रोकें",
 		"SETTINGS": "सेटिंग्स",
-		"LEAVE": "सत्र छोड़ें",
+		"LEAVE": "कमरा छोड़ें",
 		"PARTICIPANTS": "सदस्य",
 		"CHAT": "बातचीत",
 		"ACTIVITIES": "गतिविधियाँ"
@@ -77,7 +77,7 @@
 		"CHAT": {
 			"TITLE": "बातचीत",
 			"YOU": "आप",
-			"SUBTITLE": "सत्र समाप्त होने पर संदेश हटा दिए जाएंगे",
+			"SUBTITLE": "कमरा समाप्त होने पर संदेश हटा दिए जाएंगे",
 			"PLACEHOLDER": "एक संदेश भेजें ...",
 			"SEND": "भेजें",
 			"MESSAGE_SENT_NOTIFICATION": "संदेश भेजा गया",
@@ -100,7 +100,7 @@
 			"CAPTIONS": "उपशीर्षक",
 			"DISABLED_AUDIO": "ऑडियो अक्षम",
 			"DISABLED_VIDEO": "वीडियो अक्षम",
-			"CAPTIONS_LANG_TEXT": "उस भाषा का चयन करें जिसका उपयोग सत्र के प्रतिभागी करेंगे। उपशीर्षक उस भाषा में दिखाई देंगे।"
+			"CAPTIONS_LANG_TEXT": "उस भाषा का चयन करें जिसका उपयोग कमरा के प्रतिभागी करेंगे। उपशीर्षक उस भाषा में दिखाई देंगे।"
 		},
 		"BACKGROUND": {
 			"TITLE": "पृष्ठभूमि प्रभाव",
@@ -139,9 +139,9 @@
 		}
 	},
 	"ERRORS": {
-		"SESSION": "सत्र से जुड़ने में त्रुटि हुई",
+		"SESSION": "कमरा से जुड़ने में त्रुटि हुई",
 		"CONNECTION": "कनेक्शन खो गया",
-		"RECONNECT": "ओह! सत्र से फिर से कनेक्ट करने का प्रयास कर रहा है",
+		"RECONNECT": "ओह! कमरा से फिर से कनेक्ट करने का प्रयास कर रहा है",
 		"DISCONNECT": "आपको डिस्कनेक्ट कर दिया गया है",
 		"NETWORK_DISCONNECT": "नेटवर्क कनेक्टिविटी समस्या के कारण आपका कनेक्शन टूट गया",
 		"SIGNAL_CLOSE": "सर्वर से कनेक्शन अप्रत्याशित रूप से बंद हो गया",
