--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/es.json
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/es.json
@@ -33,7 +33,7 @@
 		"AUDIO_DEVICE": "Dispositivo de audio",
 		"NO_VIDEO_DEVICE": "Dispositivo de vídeo no encontrado",
 		"NO_AUDIO_DEVICE": "Dispositivo de audio no encontrado",
-		"PREPARING": "Preparando la session ...",
+		"PREPARING": "Preparando la sala ...",
 		"JOIN": "Unirme ahora"
 	},
 	"TOOLBAR": {
