--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/fr.json
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/fr.json
@@ -33,8 +33,8 @@
 		"AUDIO_DEVICE": "Périphérique audio",
 		"NO_VIDEO_DEVICE": "Appareil vidéo introuvable",
 		"NO_AUDIO_DEVICE": "Appareil audio introuvable",
-		"JOIN": "Joindre une session",
-		"PREPARING": "Préparation de la session ..."
+		"JOIN": "Joindre une salle",
+		"PREPARING": "Préparation de la salle ..."
 	},
 	"TOOLBAR": {
 		"MUTE_AUDIO": "Mettez votre audio en sourdine",
@@ -52,7 +52,7 @@
 		"START_RECORDING": "démarrer l'enregistrement",
 		"STOP_RECORDING": "Arrêter l'enregistrement",
 		"SETTINGS": "Paramètres",
-		"LEAVE": "Quitter la session",
+		"LEAVE": "Quitter la salle",
 		"PARTICIPANTS": "Participants",
 		"CHAT": "Chat",
 		"ACTIVITES": "Activités"
@@ -77,7 +77,7 @@
 		"CHAT": {
 			"TITLE": "Chat",
 			"YOU": "Vous",
-			"SUBTITLE": "Les messages seront supprimés à la fin de la session",
+			"SUBTITLE": "Les messages seront supprimés à la fin de la salle",
 			"PLACEHOLDER": "Envoyer un message...",
 			"SEND": "Envoyer",
 			"MESSAGE_SENT_NOTIFICATION": "message envoyé",
@@ -100,7 +100,7 @@
 			"CAPTIONS": "Les sous-titres",
 			"DISABLED_AUDIO": "Désactiver l'audio",
 			"DISABLED_VIDEO": "Désactiver la vidéo",
-			"CAPTIONS_LANG_TEXT": "Sélectionnez la langue que les participants de la session utiliseront. Les sous-titres apparaîtront dans cette langue."
+			"CAPTIONS_LANG_TEXT": "Sélectionnez la langue que les participants de la salle utiliseront. Les sous-titres apparaîtront dans cette langue."
 		},
 		"BACKGROUND": {
 			"TITLE": "Effets de fond",
@@ -139,9 +139,9 @@
 		}
 	},
 	"ERRORS": {
-		"SESSION": "There was an error connecting to the session",
+		"SESSION": "There was an error connecting to the salle",
 		"CONNECTION": "Connexion perdue",
-		"RECONNECT": "Oups ! Tentative de reconnexion à la session...",
+		"RECONNECT": "Oups ! Tentative de reconnexion à la salle...",
 		"DISCONNECT": "Vous avez été déconnecté",
 		"NETWORK_DISCONNECT": "Vous avez été déconnecté en raison d'un problème de connexion réseau",
 		"SIGNAL_CLOSE": "La connexion au serveur a été interrompue de manière inattendue",
