--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/ja.json
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/ja.json
@@ -33,8 +33,8 @@
 		"AUDIO_DEVICE": "オーディオデバイス",
 		"NO_VIDEO_DEVICE": "ビデオデバイスが見つかりません",
 		"NO_AUDIO_DEVICE": "オーディオデバイスが見つかりません",
-		"JOIN": "セッションに参加する",
-		"PREPARING": "セッションの準備中..."
+		"JOIN": "ルームに参加する",
+		"PREPARING": "ルームの準備中..."
 	},
 	"TOOLBAR": {
 		"MUTE_AUDIO": "オーディオをミュートする",
@@ -52,7 +52,7 @@
 		"START_RECORDING": "録画開始",
 		"STOP_RECORDING": "録画の停止",
 		"SETTINGS": "設定",
-		"LEAVE": "セッションを終了する",
+		"LEAVE": "ルームを終了する",
 		"PARTICIPANTS": "参加者",
 		"CHAT": "チャット",
 		"ACTIVITIES": "アクティビティ"
@@ -77,7 +77,7 @@
 		"CHAT": {
 			"TITLE": "チャット",
 			"YOU": "あなた",
-			"SUBTITLE": "メッセージはセッション終了時に削除されます",
+			"SUBTITLE": "メッセージはルーム終了時に削除されます",
 			"PLACEHOLDER": "メッセージを送信...",
 			"SEND": "送信する",
 			"MESSAGE_SENT_NOTIFICATION": "メッセージを送信しました",
@@ -100,7 +100,7 @@
 			"CAPTIONS": "字幕",
 			"DISABLED_AUDIO": "オーディオを無効にする",
 			"DISABLED_VIDEO": "ビデオを無効にする",
-			"CAPTIONS_LANG_TEXT": "セッションの参加者が使用する言語を選択します。キャプションはその言語で表示されます。"
+			"CAPTIONS_LANG_TEXT": "ルームの参加者が使用する言語を選択します。キャプションはその言語で表示されます。"
 		},
 		"BACKGROUND": {
 			"TITLE": "背景効果",
@@ -139,9 +139,9 @@
 		}
 	},
 	"ERRORS": {
-		"SESSION": "セッションへの接続にエラーが発生しました",
+		"SESSION": "ルームへの接続にエラーが発生しました",
 		"CONNECTION": "接続が失われました",
-		"RECONNECT": "セッションへの再接続を試みています",
+		"RECONNECT": "ルームへの再接続を試みています",
 		"DISCONNECT": "接続が切断されました",
 		"NETWORK_DISCONNECT": "ネットワーク接続の問題により切断されました",
 		"SIGNAL_CLOSE": "サーバーへの接続が予期せず切断されました",
